# monorepo_pants_namespace_packages

./: .gitignore  LICENSE  README.md  import_the_things.py  pants.toml
foo.bar/: .bumpversion.cfg  .cruft.json  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
foo.bar/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
foo.bar/foo/bar/: __init__.py  main.py
foo.bar/tests/: __init__.py  test_foo-bar.py
foo.bir/: .bumpversion.cfg  .cruft.json  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
foo.bir/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
foo.bir/foo/bir/: __init__.py  main.py
foo.bir/tests/: __init__.py  test_foo-bir.py
